--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/ui": "^2.19.2",
     "nuxt": "^3.14.0",
     "vue": "latest",
     "vue-router": "latest"
