--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/content": "^2.13.4",
     "@nuxt/ui": "^2.19.2",
+    "github-markdown-css": "^5.8.0",
     "nuxt": "^3.14.0",
     "vue": "latest",
     "vue-router": "latest"
